# advent-of-code

./: README.md
2024/: .gitignore  Cargo.toml  README.md  benchmarks.txt  justfile
2024/daily-template/: Cargo.toml
2024/day-01/: Cargo.toml
2024/day-01/src/: part1.rs  part2.rs
2024/day-02/: Cargo.toml
2024/day-02/src/: part1.rs  part2.rs
2024/day-03/: Cargo.toml
2024/day-03/src/: part1.rs  part2.rs
2024/day-04/: Cargo.toml
2024/day-04/src/: part1.rs  part2.rs
2024/day-05/: Cargo.toml
2024/day-05/src/: part1.rs  part2.rs
2024/scripts/: get_aoc_input.rs
